--- a/docs/hpc/13_tutorial_intro_hpc/08_running_parallel_job.mdx
+++ b/docs/hpc/13_tutorial_intro_hpc/08_running_parallel_job.mdx
@@ -17,7 +17,7 @@ We now have the tools we need to run a multi-processor job. This is a very impor
 
 If you disconnected, log back in to the cluster.
 ```bash
-[user@laptop ~]$ ssh NetID@greene.hpc.nyu.edu
+[user@laptop ~]$ ssh NetID@torch.hpc.nyu.edu
 ```
 
 ## Install the Amdahl Program
