--- a/docs/hpc/13_tutorial_intro_hpc/03_exploring_remote_resources.mdx
+++ b/docs/hpc/13_tutorial_intro_hpc/03_exploring_remote_resources.mdx
@@ -16,7 +16,7 @@ Objectives
 ## Look Around the Remote System
 If you have not already connected to Greene, please do so now:
 ```bash
-[user@laptop ~]$  ssh NetID@torch.hpc.nyu.edu
+[user@laptop ~]$  ssh NetID@login.torch.hpc.nyu.edu
 ```
 Take a look at your home directory on the remote system:
 ```bash
@@ -196,7 +196,7 @@ Now compare the resources of your computer with those of the login node. <br />
 </summary>
 :::tip[Solution]
 ```bash
-[user@laptop ~]$ ssh NetID@torch.hpc.nyu.edu
+[user@laptop ~]$ ssh NetID@login.torch.hpc.nyu.edu
 [NetID@log-1 ~]$ nproc --all
 [NetID@log-1 ~]$ free -m
 ```
