--- a/docs/hpc/12_tutorial_intro_shell_hpc/01_intro.mdx
+++ b/docs/hpc/12_tutorial_intro_shell_hpc/01_intro.mdx
@@ -1,10 +1,10 @@
-# Introduction to Using the Shell on Greene
+# Introduction to Using the Shell on Torch
 
-This tutorial is an introduction to using the high-performance computing resources on Greene.  It is intended to give users a good introduction and overview of the tools available and how to use them effectively.
+This tutorial is an introduction to using the high-performance computing resources on Torch.  It is intended to give users a good introduction and overview of the tools available and how to use them effectively.
 
 By the end of this tutorial users will know how to:
 -   Use the UNIX command line (also known as the terminal or shell)
--   Connect to Greene
+-   Connect to Torch
 -   Write simple shell scripts
 
 :::warning[Prerequisites]
@@ -15,7 +15,7 @@ There are no real prerequisites for this tutorial, but prior programming and/or 
 
 :::note[Overview]
 Questions:
--   Why would I be interested in High Performance Computing (HPC) on Greene?
+-   Why would I be interested in High Performance Computing (HPC) on Torch?
 -   What can I expect to learn from this course?
 
 Objectives:
@@ -23,7 +23,7 @@ Objectives:
 -   Identify how an HPC system could benefit you.
 :::
 
-### Why Use Greene?
+### Why Use Torch?
 
 :::info[What do you need?]
 How does computing help you do your research? How could more computing help you do more or better research?
@@ -35,7 +35,7 @@ Frequently, research problems that use computing can outgrow the desktop or lapt
 -   A genomics researcher has been using small datasets of sequence data, but soon will be receiving a new type of sequencing data that is 10 times as large. It’s already challenging to open the datasets on their computer — analyzing these larger datasets will probably crash it.
 -   An engineer is using a fluid dynamics package that has an option to run in parallel. So far, they haven’t used this option on their desktop, but in going from 2D to 3D simulations, simulation time has more than tripled and it might be useful to take advantage of that feature.
 
-In all these cases, what is needed is access to more computers than can be used at the same time. Luckily, large a scale computing system — shared computing resources with lots of computers — is available at NYU and it is named Greene. Greene has more central processing units (CPUs), CPUs that operate at higher speeds, more memory, more storage, and faster connections with other computer systems. This kind of system is frequently referred to as a “cluster”, “supercomputer” or an “high performance computing” (HPC) system. In this lesson, we will usually use the terminology HPC and HPC cluster.
+In all these cases, what is needed is access to more computers than can be used at the same time. Luckily, large a scale computing system — shared computing resources with lots of computers — is available at NYU and it is named Torch. Torch has more central processing units (CPUs), CPUs that operate at higher speeds, more memory, more storage, and faster connections with other computer systems. This kind of system is frequently referred to as a “cluster”, “supercomputer” or an “high performance computing” (HPC) system. In this lesson, we will usually use the terminology HPC and HPC cluster.
 
 Using a cluster often has the following advantages for researchers:
 
