--- a/docs/hpc/13_tutorial_intro_hpc/01_intro_hpc.mdx
+++ b/docs/hpc/13_tutorial_intro_hpc/01_intro_hpc.mdx
@@ -1,9 +1,9 @@
 # Introduction to High-Performance Computing
 
-This tutorial is an introduction to using the Greene high-performance computing systems at NYU effectively. It is not intended to be an exhaustive course on parallel programming.  The goal is to give new users of Greene an introduction and overview of the tools available and how to use them effectively.
+This tutorial is an introduction to using the Torch high-performance computing systems at NYU effectively. It is not intended to be an exhaustive course on parallel programming.  The goal is to give new users of Torch an introduction and overview of the tools available and how to use them effectively.
 
 :::warning[Prerequisites]
-Command line experience is necessary for this lesson. We recommend participants go through our [Introduction to Using the Shell on Greene](../12_tutorial_intro_shell_hpc/01_intro.mdx) tutorial, if new to the command line (also known as terminal or shell).
+Command line experience is necessary for this lesson. We recommend participants go through our [Introduction to Using the Shell on Torch](../12_tutorial_intro_shell_hpc/01_intro.mdx) tutorial, if new to the command line (also known as terminal or shell).
 :::
 
 :::note[Objectives]
@@ -16,5 +16,5 @@ By the end of this tutorial, participants will know how to:
 :::
 
 :::info[Provenance]
-This tutorial was adapted for NYU's Greene HPC from [HPC Carpentry](https://github.com/hpc-carpentry)
+This tutorial was adapted for NYU's Torch HPC from [HPC Carpentry](https://github.com/hpc-carpentry)
 :::
