--- a/docs/hpc/13_tutorial_intro_hpc/03_exploring_remote_resources.mdx
+++ b/docs/hpc/13_tutorial_intro_hpc/03_exploring_remote_resources.mdx
@@ -14,7 +14,7 @@ Objectives
 :::
 
 ## Look Around the Remote System
-If you have not already connected to Greene, please do so now:
+If you have not already connected to Torch, please do so now:
 ```bash
 [user@laptop ~]$  ssh NetID@login.torch.hpc.nyu.edu
 ```
@@ -26,7 +26,7 @@ Take a look at your home directory on the remote system:
 <details>
 <summary>
 :::info[What’s different between your machine and the remote?]
-Open a second terminal window on your local computer and run the `ls` command (without logging in to Greene). What differences do you see? <br />
+Open a second terminal window on your local computer and run the `ls` command (without logging in to Torch). What differences do you see? <br />
 **[Click for Solution]**
 :::
 </summary>
@@ -71,7 +71,7 @@ Who else is logged in to the login node?
 This may show only your user ID, but there are likely several other people (including fellow learners) connected right now.
 
 :::tip[Dedicated Transfer Nodes]
-If you want to transfer larger amounts of data to or from the cluster, Greene offers dedicated nodes for data transfers only. The motivation for this lies in the fact that larger data transfers should not obstruct operation of the login node for anybody else. As a rule of thumb, consider all transfers of a volume larger than 500 MB to 1 GB as large. But these numbers change, e.g., depending on the network connection of yourself and of your cluster or other factors.
+If you want to transfer larger amounts of data to or from the cluster, Torch offers dedicated nodes for data transfers only. The motivation for this lies in the fact that larger data transfers should not obstruct operation of the login node for anybody else. As a rule of thumb, consider all transfers of a volume larger than 500 MB to 1 GB as large. But these numbers change, e.g., depending on the network connection of yourself and of your cluster or other factors.
 :::
 
 The real work on a cluster gets done by the *compute* (or *worker*) nodes. compute nodes come in many shapes and sizes, but generally are dedicated to long or hard tasks that require a lot of computational resources.
