--- a/docs/hpc/13_tutorial_intro_hpc/04_scheduler_fundamentals.mdx
+++ b/docs/hpc/13_tutorial_intro_hpc/04_scheduler_fundamentals.mdx
@@ -226,7 +226,7 @@ gnuplot> test
 ```
 If X11 forwarding is working you will see a test plot window open.
 
-Greene has the [slurm-spank-x11](https://github.com/hautreux/slurm-spank-x11) plugin installed, so you can ensure X11 forwarding within interactive jobs by using the `--x11` option for `srun` with the command `srun --x11 --pty bash`.
+Torch has the [slurm-spank-x11](https://github.com/hautreux/slurm-spank-x11) plugin installed, so you can ensure X11 forwarding within interactive jobs by using the `--x11` option for `srun` with the command `srun --x11 --pty bash`.
 :::
 
 When you are done with the interactive job, type `exit` to quit your session.
