--- a/docs/hpc/13_tutorial_intro_hpc/06_modules.mdx
+++ b/docs/hpc/13_tutorial_intro_hpc/06_modules.mdx
@@ -26,7 +26,7 @@ Before we start using individual software packages, however, we should understan
 
 There are a number of different environment module implementations commonly used on HPC systems: the two most common are *TCL modules* and *Lmod*. Both of these use similar syntax and the concepts are the same so learning to use one will allow you to use whichever is installed on the system you are using. In both implementations the `module` command is used to interact with environment modules. An additional subcommand is usually added to the command to specify what you want to do. For a list of subcommands you can use `module -h` or `module help`. As for all commands, you can access the full help on the *man* pages with `man module`.
 
-On login to Greene you will start out with an empty environment.
+On login to Torch you will start out with an empty environment.
 
 # Listing Available Modules
 To see available software modules, use `module avail`:
