--- a/docs/hpc/09_ood/07_jupyter_with_conda_singularity.mdx
+++ b/docs/hpc/09_ood/07_jupyter_with_conda_singularity.mdx
@@ -1,14 +1,14 @@
 # Jupyter Notebook with Conda/Singularity in OOD
 
 ## OOD + Singularity + conda
-This page describes how to use your Singularity with conda environment in OOD GUI at Greene. 
+This page describes how to use your Singularity with conda environment in OOD GUI at Torch. 
 
-### Log Into Greene via the Terminal
-The following commands must be run from the terminal. Information on accessing via the terminal can be found at [Connecting to the HPC](../02_connecting_to_hpc/01_connecting_to_hpc.md) or you can log into OOD and select the `Clusters` tab at the top of the page and select `Greene Shell Access`.
+### Log Into Torch via the Terminal
+The following commands must be run from the terminal. Information on accessing via the terminal can be found at [Connecting to the HPC](../02_connecting_to_hpc/01_connecting_to_hpc.md) or you can log into OOD and select the `Clusters` tab at the top of the page and select `Torch Shell Access`.
 
 ### Preinstallation Warning
 :::warning
-If you have initialized Conda in your base environment, your prompt on Greene may show something like:
+If you have initialized Conda in your base environment, your prompt on Torch may show something like:
 ```bash
 (base) [NetID@log-1 ~]$
 ```
