--- a/docs/hpc/11_system_status.mdx
+++ b/docs/hpc/11_system_status.mdx
@@ -1,4 +1,4 @@
-# Greene System Status
+# Torch System Status
 :::note
 To be able to see the panels below you need to be within NYU network (use VPN if you are not on campus)
 :::
