--- a/docs/hpc/13_tutorial_intro_hpc/07_transferring_files_remote.mdx
+++ b/docs/hpc/13_tutorial_intro_hpc/07_transferring_files_remote.mdx
@@ -273,7 +273,7 @@ As mentioned above, if you have related data that consists of a large number of 
 :::info[Consider the Best Way to Transfer Data]
 If you are transferring large amounts of data you will need to think about what may affect your transfer performance. It is always useful to run some tests that you can use to extrapolate how long it will take to transfer your data.
 
-Say you have a “data” folder containing 10,000 or so files, a healthy mix of small and large ASCII and binary data. Which of the following would be the best way to transfer them to Greene?
+Say you have a “data” folder containing 10,000 or so files, a healthy mix of small and large ASCII and binary data. Which of the following would be the best way to transfer them to Torch?
 ```bash
 [user@laptop ~]$ scp -r data NYUNetID@login.torch.hpc.nyu.edu:~/
 ```
