--- a/docs/hpc/13_tutorial_intro_hpc/08_running_parallel_job.mdx
+++ b/docs/hpc/13_tutorial_intro_hpc/08_running_parallel_job.mdx
@@ -30,7 +30,7 @@ Let's start by moving the `amdahl` directory form our home directory to our scra
 [NetID@log-1 ~]$ mv amdahl /scratch/$USER
 ```
 :::tip
-For more information about storage options on Greene please see [HPC Storage](../03_storage/01_intro_and_data_management.mdx).
+For more information about storage options on Torch please see [HPC Storage](../03_storage/01_intro_and_data_management.mdx).
 :::
 
 Move into the extracted directory, then use pip, to install it in your (“user”) scratch directory:
