--- a/docs/hpc/12_tutorial_intro_shell_hpc/02_connecting_to_hpc.mdx
+++ b/docs/hpc/12_tutorial_intro_shell_hpc/02_connecting_to_hpc.mdx
@@ -227,7 +227,7 @@ If you are using PuTTY on Windows, download and use `pageant` as the SSH agent. 
 ## Modifying your .ssh/config file
 Please add the following lines to your `~/.ssh/config` file:
 ```
-Host login.torch.hpc.nyu.edu dtn.hpc.nyu.edu
+Host login.torch.hpc.nyu.edu dtn.torch.hpc.nyu.edu
   StrictHostKeyChecking no
   ServerAliveInterval 60
   ForwardAgent yes
